feat: Update Hero Section per PRD + improve About, Contact pages + update company info

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -6,19 +6,20 @@
     "contact": "تواصل معنا"
   },
   "hero": {
-    "title": "نحول أفكارك إلى",
-    "titleHighlight": "واقع رقمي",
-    "subtitle": "شركة WAI Soft متخصصة في تطوير البرمجيات باستخدام أحدث تقنيات الذكاء الاصطناعي. نساعدك في بناء مواقع وتطبيقات عصرية تحقق أهدافك.",
+    "title": "نبني مستقبل",
+    "titleHighlight": "التجارب الرقمية",
+    "subtitle": "ويب — موبايل — UX/UI مدعوم بالذكاء الاصطناعي",
+    "description": "WAI Soft شركة برمجيات حديثة تقود سوق التكنولوجيا من خلال تصميم مواقع احترافية وتطبيقات موبايل عالية الجودة وتطوير مدعوم بالذكاء الاصطناعي.",
     "cta": "ابدأ مشروعك",
     "viewWork": "شاهد أعمالنا",
-    "badge": "نبني المستقبل بالذكاء الاصطناعي",
+    "badge": "تطوير مدعوم بالذكاء الاصطناعي",
     "scroll": "اكتشف المزيد"
   },
   "about": {
     "title": "من نحن",
     "subtitle": "نحن فريق من المحترفين الشغوفين بالتكنولوجيا",
     "story": "قصتنا",
-    "storyText": "بدأت WAI Soft في عام 2020، عندما قرر فريق من المطورين الشغوفين إنشاء شركة تقدم حلولاً تقنية مبتكرة. نحن شركة مصرية تعيش على أحدث التقنيات مع التركيز على الجودة والخدمة.",
+    "storyText": "بدأت WAI Soft في عام 2010، عندما قرر فريق من المطورين الشغوفين إنشاء شركة تقدم حلولاً تقنية مبتكرة. نحن شركة مصرية تعيش على أحدث التقنيات مع التركيز على الجودة والخدمة. على مدار 15 عاماً، قدمنا حلولاً رقمية متكاملة لأكثر من 40 عميل.",
     "meaning": "معنى WAI",
     "meaningText": "W + AI = WAY - طريقك نحو المستقبل الرقمي",
     "mission": "رسالتنا",
@@ -105,7 +106,7 @@
   "homeAbout": {
     "badge": "من نحن",
     "title": "شريكك التقني نحو المستقبل",
-    "description": "WAI Soft شركة مصرية متخصصة في تطوير البرمجيات وخدمات التصميم. نعيش على أحدث التقنيات مع التركيز على الجودة والخدمة، ونساعد الشركات والمشاريع الناشئة في رحلة التطوير.",
+    "description": "WAI Soft وكالة حلول رقمية متخصصة في تطوير الويب والتطبيقات، استضافة سحابية، وتصميم UI/UX. نعيش على أحدث التقنيات مع التركيز على الجودة والخدمة، ونساعد الشركات والمشاريع الناشئة في رحلة التحول الرقمي.",
     "experience": "سنوات من الخبرة",
     "projects": "مشروع ناجح",
     "clients": "عميل راضٍ"
