feat: UI improvements - rounded buttons, larger slogan, horizontal scroll about section, animated logo with fade on scroll

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -42,7 +42,9 @@
     "design": "تصميم UX/UI",
     "designDesc": "تصاميم جذابة وتجربة مستخدم استثنائية",
     "ai": "حلول الذكاء الاصطناعي",
-    "aiDesc": "شات بوت وأنظمة ذكية متقدمة تعزز أعمالك"
+    "aiDesc": "شات بوت وأنظمة ذكية متقدمة تعزز أعمالك",
+    "cloud": "الاستضافة السحابية",
+    "cloudDesc": "حلول استضافة سحابية آمنة وموثوقة مع أداء عالي ودعم فني متواصل"
   },
   "projects": {
     "title": "مشاريعنا",
